# Protocol

./: .gitignore  CMakeLists.txt
components/: CMakeLists.txt
components/StateMachine/: CMakeLists.txt
components/StateMachine/inc/: StateMachine.h
components/StateMachine/src/: StateMachine.c
components/StateMachine/test/: StateMachineTest.c
components/StateMachine/tools/: Enumeration.py  Event.py  Function.py  Module.py  State.py  StateMachine.c  StateMachine.h  StateMachine.py  StateMachineGenerator.py  Struct.py  Test.uml  Transition.py  Variable.py
components/Util/inc/: AllocRedirect.h  Buffer.h
